# aurora-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  README.ru.md  THIRD_PARTY_LICENSES  pyproject.toml
.github/workflows/: code-quality.yml
docker/: Dockerfile  docker-compose.yml
src/: aurora_server.rs  main.rs  sse_server.rs
src/aurora_mcp/: __init__.py  cli.py  decorators.py  server.py
src/aurora_mcp/local_templates/cmake_template/: .gitlab-ci.yml  AUTHORS.md  CMakeLists.txt  README.md  README.ru.md
src/aurora_mcp/local_templates/cmake_template/gitlab-ci/: .jobs_PSDK4.gitlab-ci.yml  .jobs_PSDK5.gitlab-ci.yml  .jobs_spell_checking.gitlab-ci.yml  project-words.txt  validate.sh
src/aurora_mcp/local_templates/cmake_template/translations/: ApplicationTemplate-en.ts  ApplicationTemplate-ru.ts
src/aurora_mcp/local_templates/flutter/: README.md
src/aurora_mcp/local_templates/qmake_template/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.ru.md  ru.auroraos.ApplicationTemplate.desktop  ru.auroraos.ApplicationTemplate.pro
src/aurora_mcp/local_templates/qmake_template/qml/pages/: AboutPage.qml  MainPage.qml
src/aurora_mcp/prompts/: __init__.py
src/aurora_mcp/prompts/qt/: __init__.py  enhance_qml.py
src/aurora_mcp/resources/: __init__.py
src/aurora_mcp/tools/: __init__.py  conan_tool.py  flutter_build_tool.py  qt_build_tool.py  rpm_packaging_tool.py  template_tool.py
src/aurora_mcp/tools/conan/: create_package.py  install_dependencies.py
src/aurora_mcp/tools/flutter/: __init__.py  build_project.py  create_project.py  setup_embedder.py
src/aurora_mcp/tools/qt/: __init__.py  build_project.py  configure_environment.py  create_project.py  enhance_qml.py  figma_to_qml.py  list_build_tools.py  list_targets.py
src/aurora_mcp/tools/rpm/: create_package.py  sign_package.py  validate_package.py
src/aurora_mcp/tools/server/: check_environment.py  info.py
src/aurora_mcp/tools/template/: __init__.py  list_templates.py
src/aurora_mcp/utils/: __init__.py  component_mapper.py  figma_client.py  qml_generator.py  qml_validator.py  sfdk_wrapper.py
tests/: __init__.py  test_build_tool_selection.py  test_enhance_qml.py  test_figma_client.py  test_figma_to_qml.py  test_path_configuration_integration.py  test_qml_generator.py  test_qml_validator.py  test_server.py
