[package]
name = "aurora-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Aurora OS MCP Team"]
description = "MCP Server for Aurora OS - Demo implementation with hello world tool"
license = "MIT"

[dependencies]
# MCP Rust SDK from git repository (working version)
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }

# For HTTP server implementation
axum = { version = "0.8", features = ["macros"] }
hyper = { version = "1" }
hyper-util = { version = "0", features = ["server"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
tower-http = { version = "0.6", features = ["cors"] }

# Async runtime
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "io-std",
    "signal",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }

# JSON Schema generation for tool parameters
schemars = "1.0"

# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }

# Time handling for health checks
chrono = { version = "0.4", features = ["serde"] }
